fix extra gap on top

--- a/front-end/src/routes/Template/Main/main.module.css
+++ b/front-end/src/routes/Template/Main/main.module.css
@@ -41,7 +41,7 @@
 
 @media only screen and (max-width: 480px) {
   .main_container {
-    padding: 0.5rem;
+    padding: 0 0.5rem;
   }
 
   .mainLeaderboard_container {
